add groovyExecuror command to readme